# Topsis-Raj-102217077

./: 102217077-data.csv  102217077-result.csv  LICENSE  README.md  setup.cfg
src/topsis_raj_102217077/: __init__.py  topsis.py
