[metadata]
name = Topsis-Raj-102217077
version = 0.0.1
author = Raj
author_email = jagarwadrajmeena@gmail.com
description = A package to implement TOPSIS method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tantai-jin/Topsis-Raj-102217077
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
